# yayo-superstrike

./: .gitignore  AGENTS.md  CMakeLists.txt  VERSION  app.overlay  index.html  pm_static.yml  prj.conf  wrangler.jsonc
.github/workflows/: build.yml  release.yml
functions/: api.js
src/: ble.c  ble.h  ble_service.c  ble_service.h  button.c  button.h  console_commands.c  dfu.c  dfu.h  led.c  led.h  main.c  motor.c  motor.h  sensor.c  sensor.h  temperature.c  temperature.h  usb_console.c
sysbuild/: CMakeLists.txt  firmware.conf  mcuboot.conf
web/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: main.tsx  styles.css  vite-env.d.ts
web/src/app/: App.tsx
web/src/components/: Panel.tsx  StatusBadge.tsx
web/src/features/device/: CustomDeviceService.ts  constants.ts  useCustomDevice.ts
web/src/features/logs/: types.ts
web/src/features/ota/: McuManagerClient.ts  release.ts  types.ts  useMcuManager.ts
web/src/types/: mcumgr-web.d.ts
